# geometry-processing-rs

./: Cargo.toml  README.md  test_faer_sparse.rs
docs/: OOP_migration.md  README.md  index.md
docs/core/: corner.md  dec.md  geometry.md  halfedge.md  index.md  mesh.md  vertex.md
docs/linear_algebra/: complex.md  dense_matrix.md  index.md  sparse_matrix.md  vector.md
docs/projects/: index.md  parameterization.md  poisson_problem.md  projects.md
docs/utils/: index.md  solvers.md  utils.md
examples/: test_faer.rs  verify_torus.rs
src/: lib.rs  main.rs
src/core/: bevy_backend.rs  corner.rs  dec.rs  edge.md  edge.rs  face.md  face.rs  geometry.md  geometry.rs  halfedge.rs  mesh.md  mesh.rs  mesh_subset.rs  mod.rs  vertex.rs
src/linear_algebra/: complex.rs  dense_matrix.md  dense_matrix.rs  mod.rs  sparse_matrix.md  sparse_matrix.rs  traits.rs  vector.md  vector.rs
src/projects/: direction_field_design.rs  discrete_curvatures.rs  discrete_exterior_calculus_project.rs  geodesic_distance.rs  geometric_flow.rs  harmonic_bases.rs  mod.rs  parameterization.rs  poisson_problem.rs  simplicial_complex_operators.rs  tree_cotree.rs  vector_field_decomposition.rs
src/utils/: colormap.rs  distortion.rs  meshio.rs  mod.rs  solvers.rs
tests/: bevy_backend_test.rs  dec.rs  explore_faer.rs  geodesic_distance.rs  geometric_flow.rs  geometry.rs  linear_algebra.rs  mesh.rs  parameterization.rs  poisson_problem.rs
tests/common/: mod.rs
