[package]
name = "geometry-processing-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mcf-demo"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_pbr", "bevy_asset", "x11"] }
bevy_mesh = "0.18.0"
faer = { version = "0.20" }
num-complex = "0.4"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
bevy = { version = "0.18.0", default-features = false }
